# 2D_fractals_generator

./: .gitignore  .gitmodules  CMakeLists.txt  Fractal_generator.cpp  Makefile  README.md  imgui.ini
includes/: Menu.hpp  Renderer.hpp  Simulator.hpp  complex.h  display.h  fractal.h  libraries.hpp  simulation.h  utils.h  vector.h
libraries/Dimension3D/includes/dim/opengl/: FrameBuffer.hpp  Texture.hpp
libraries/Dimension3D/sources/opengl/: FrameBuffer.cpp  Texture.cpp
shaders/: julia.frag  mandelbrot.frag  mandelbrot.vert  post.frag
shaders/compute/: cl_compute_shader.cl
sources/: Menu.cpp  Renderer.cpp  Simulator.cpp  Simulator.hpp  complex.cpp  display.cpp  fractal.cpp  libraries.hpp  main.cpp  simulation.cpp  utils.cpp  vector.cpp
sources/compute_shader/: ComputeShader.cpp  ComputeShader.hpp  Image.cpp  Image.hpp
sources/fractals/: Buddhabrot.cpp  Buddhabrot.hpp  BurningShip.cpp  BurningShip.hpp  Fractal.cpp  Fractal.hpp  Julia.cpp  Julia.hpp  Mandelbrot.cpp  Mandelbrot.hpp  Newton_1.cpp  Newton_1.hpp  Newton_2.cpp  Newton_2.hpp
sources/menu/: Menu.cpp  Menu.hpp
sources/renderer/: ColorPallet.cpp  ColorPallet.hpp  Renderer.cpp  Renderer.hpp
